Fix H1 wraping

--- a/source/_styles/style.styl
+++ b/source/_styles/style.styl
@@ -27,7 +27,6 @@ h3
 h1
     font-size 62pt
     line-height 64pt
-    word-spacing 100vw
 
 h2
     font-size 20pt
